// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DebateStepPageVote/> should renders correctly 1`] = `
<div
  class="sc-bdnylx Flex___StyledAppBox-ll88x1-0 fBUPCS dzUdRG"
  style="opacity:0"
>
  <button
    class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 cTWwWU gQREUn DebateStepPageVote___StyledButton-sc-1t1mb78-0 dOSxvR"
    type="button"
  >
    <iconmock
      class="sc-bdnylx Icon__IconInner-sc-19k5t1s-0 Icon___StyledIconInner-sc-19k5t1s-1 ldGFSW jSXedj KA-deO icon"
    />
    global.for
  </button>
  <button
    class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 cTWwWU gQREUn DebateStepPageVote___StyledButton2-sc-1t1mb78-1 kZJOtr"
    type="button"
  >
    <iconmock
      class="sc-bdnylx Icon__IconInner-sc-19k5t1s-0 Icon___StyledIconInner-sc-19k5t1s-1 ldGFSW jSXedj KA-deO icon"
    />
    global.against
  </button>
</div>
`;

exports[`<DebateStepPageVote/> should renders correctly when not authenticated 1`] = `
<div
  class="sc-bdnylx Flex___StyledAppBox-ll88x1-0 fBUPCS dzUdRG"
  style="opacity:0"
>
  <span>
    <button
      class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 cTWwWU gQREUn DebateStepPageVote___StyledButton-sc-1t1mb78-0 dOSxvR"
      type="button"
    >
      <iconmock
        class="sc-bdnylx Icon__IconInner-sc-19k5t1s-0 Icon___StyledIconInner-sc-19k5t1s-1 ldGFSW jSXedj KA-deO icon"
      />
      global.for
    </button>
  </span>
  <span>
    <button
      class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 cTWwWU gQREUn DebateStepPageVote___StyledButton2-sc-1t1mb78-1 kZJOtr"
      type="button"
    >
      <iconmock
        class="sc-bdnylx Icon__IconInner-sc-19k5t1s-0 Icon___StyledIconInner-sc-19k5t1s-1 ldGFSW jSXedj KA-deO icon"
      />
      global.against
    </button>
  </span>
</div>
`;

exports[`<DebateStepPageVote/> should renders correctly with anonymous participation 1`] = `
<div
  class="sc-bdnylx Flex___StyledAppBox-ll88x1-0 fBUPCS dzUdRG"
  style="opacity:0"
>
  <button
    class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 cTWwWU gQREUn DebateStepPageVote___StyledButton-sc-1t1mb78-0 dOSxvR"
    type="button"
  >
    <iconmock
      class="sc-bdnylx Icon__IconInner-sc-19k5t1s-0 Icon___StyledIconInner-sc-19k5t1s-1 ldGFSW jSXedj KA-deO icon"
    />
    global.for
  </button>
  <button
    class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 cTWwWU gQREUn DebateStepPageVote___StyledButton2-sc-1t1mb78-1 kZJOtr"
    type="button"
  >
    <iconmock
      class="sc-bdnylx Icon__IconInner-sc-19k5t1s-0 Icon___StyledIconInner-sc-19k5t1s-1 ldGFSW jSXedj KA-deO icon"
    />
    global.against
  </button>
</div>
`;

exports[`<DebateStepPageVote/> should renders correctly with email not confirmed argument 1`] = `
<div
  class="sc-bdnylx Flex___StyledAppBox-ll88x1-0 fBUPCS dzUdRG"
  style="opacity:0"
>
  <button
    class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 cTWwWU gQREUn DebateStepPageVote___StyledButton-sc-1t1mb78-0 dOSxvR"
    type="button"
  >
    <iconmock
      class="sc-bdnylx Icon__IconInner-sc-19k5t1s-0 Icon___StyledIconInner-sc-19k5t1s-1 ldGFSW jSXedj KA-deO icon"
    />
    global.for
  </button>
  <button
    class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 cTWwWU gQREUn DebateStepPageVote___StyledButton2-sc-1t1mb78-1 kZJOtr"
    type="button"
  >
    <iconmock
      class="sc-bdnylx Icon__IconInner-sc-19k5t1s-0 Icon___StyledIconInner-sc-19k5t1s-1 ldGFSW jSXedj KA-deO icon"
    />
    global.against
  </button>
</div>
`;
